Reflects review comments